add pie chart, add redux, reactify d3 code, set up controls

--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "@mui/material-nextjs": "^5.16.6",
+    "@reduxjs/toolkit": "^2.2.7",
     "@types/d3": "^7.4.3",
     "@types/geojson": "^7946.0.14",
     "d3": "^7.9.0",
     "d3-geo": "^3.1.1",
+    "framer-motion": "^11.3.21",
     "next": "^14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
