--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     "d3": "^7.9.0",
     "d3-geo": "^3.1.1",
     "framer-motion": "^11.3.21",
+    "geojson": "^0.5.0",
     "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "22.1.0",
     "@types/react": "^18",
-    "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "typescript": "^5"
