--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@types/node": "22.1.0",
